# scaup-backend

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .test.env  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.rst  alembic.ini  catalog-info.yaml  config.json  pyproject.toml  setup.cfg
.github/workflows/: _integration.yml
alembic/: env.py
alembic/versions/: 10383934c70b_set_null_on_delete_for_parents.py  170457b06efc_use_code_in_registeredcontainer.py  1daa99b93377_make_name_shipment_id_unique_.py  223b22c06811_add_subtype_column.py  2437fc6c6661_added_internal_current_columns.py  297144dfe234_add_sample_parent_child_relationship.py  31b603858335_increase_name_character_limit.py  3475edcfb324_barcode_is_nullable.py  4c06e878da70_add_registeredcontainer_column.py  5968a694dd6a_add_unique_constraints_to_location_.py  5ebbd7c2b164_make_details_column_not_mandatory.py  730f6f07da68_make_barcode_column_string.py  7325165750bc_add_creation_timestamps.py  7712d39c0cdc_add_comments_column_to_sample_table.py  8ec104fbae2f_external_id_is_unique.py  91465026b6f3_add_shipmentrequest_column.py  93971770883b_add_sample_parent_child_relationship.py  b22d0b329bca_add_unique_constraint_to_top_level_.py  b39d8fe01630_add_externalid_column.py  b74d7e02e702_add_lab_contacts_column_to_top_level_.py  bc8b830b4e87_add_sublocation_column.py  bd83f0b51afb_add_location_column_to_container_table.py  c5d0b0fbc1e4_add_session_type_column.py  cff8953e4ffb_add_visit_number_column.py  dea9c772d734_add_laststatusupdate_column.py  e72a0be2202a_make_code_nullable.py  e74dc941aa16_use_uuids_for_barcode.py  faeec6295a58_add_pre_session_table.py
database/: Dockerfile  data.sql
src/sample_handling/: __init__.py  main.py
src/sample_handling/assets/: __init__.py  paths.py
src/sample_handling/auth/: __init__.py  dummy.py  micro.py  template.py
src/sample_handling/crud/: containers.py  internal.py  pre_sessions.py  proposal.py  proposals.py  samples.py  shipment.py  shipments.py  top_level_containers.py
src/sample_handling/models/: containers.py  sample.py  samples.py  shipment.py  shipments.py  table.py  top_level_containers.py
src/sample_handling/models/inner_db/: tables.py
src/sample_handling/routes/: containers.py  internal.py  proposal.py  proposals.py  samples.py  shipment.py  shipments.py  top_level_containers.py
src/sample_handling/utils/: auth.py  config.py  crud.py  database.py  external.py  generic.py  models.py  query.py  session.py
src/scaup/: main.py
src/scaup/assets/: paths.py  text.py
src/scaup/auth/: __init__.py  dummy.py  micro.py  template.py
src/scaup/crud/: containers.py  internal.py  pdf.py  pre_sessions.py  proposals.py  samples.py  shipments.py  top_level_containers.py
src/scaup/models/: alerts.py  containers.py  pre_sessions.py  samples.py  sessions.py  shipments.py  top_level_containers.py
src/scaup/models/inner_db/: tables.py
src/scaup/routes/: containers.py  internal.py  proposals.py  samples.py  sessions.py  shipments.py  top_level_containers.py
src/scaup/utils/: alerts.py  auth.py  config.py  crud.py  database.py  external.py  generic.py  models.py  query.py  session.py
tests/: conftest.py  test.config.json
tests/auth/: test_micro.py
tests/internal/: test_create_container.py  test_create_preloaded.py  test_create_tlc.py  test_get.py  test_get_list.py  test_get_unassigned.py  test_report.py
tests/proposal/: test_create_shipment.py  test_get_shipment.py  test_proposal.py
tests/proposals/: responses.py  test_assign_cassette_position.py  test_create_shipment.py  test_get_containers.py  test_get_data.py  test_get_samples.py  test_get_session_shipments.py  test_get_shipment.py  test_get_shipments.py
tests/sessions/: test_get.py
tests/shipment/: test_get_unassigned.py
tests/shipment/sample/: responses.py  test_create.py  test_delete.py  test_edit.py
tests/shipments/: responses.py  test_assign_cassette_position.py  test_create_item.py  test_create_request.py  test_delete_item.py  test_get.py  test_get_request.py  test_get_unassigned.py  test_push.py  test_report.py  test_tracking_labels.py  test_update_status.py
tests/shipments/containers/: test_create.py  test_delete.py  test_edit.py  test_get.py  test_get_samples.py
tests/shipments/pre_session/: test_get.py  test_upsert.py
tests/shipments/samples/: responses.py  test_create.py  test_delete.py  test_edit.py  test_get.py
tests/shipments/top_level_containers/: responses.py  test_create.py  test_delete.py  test_edit.py  test_get.py
tests/shipments/top_level_containers/containers/: __init__.py
tests/test_utils/: jwtES256.key.test  jwtES256.pem.test  regex.py  users.py
tests/utils/: regex.py  test_alerts.py  test_auth.py  test_crud.py  test_external.py  test_generic.py  test_models.py
