[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample_handling"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "eBIC's sample handling backend"

dependencies = [
    "typing-extensions;python_version<'3.8'",
    "SQLAlchemy~=2.0.36",
    "fastapi~=0.115.4",
    "psycopg[binary,pool]~=3.1.17",
    "pydantic~=2.9.2",
    "uvicorn~=0.30.1", 
    "types-requests",
    "lims_utils~=0.2.5",
    "requests",
    "fpdf2~=2.7.9",
    "qrcode~=7.4.2",
    "pyjwt~=2.9.0",
    "alembic"
]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.rst"
requires-python = ">=3.9"    

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pipdeptree",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "tox-direct",
    "types-mock",
    "pytest-asyncio",
    "responses",
    # https://github.com/encode/httpx/blob/master/CHANGELOG.md#0270-21st-february-2024
    "httpx~=0.26.0"
]

[project.scripts]
sample_handling = "sample_handling.__main__:main"

[project.urls]
GitHub = "https://gitlab.diamond.ac.uk/lims/ebic-sample-handling-backend"

[[project.authors]] # Further authors may be added by duplicating this section
email = "guilherme.de-freitas@diamond.ac.uk"
name = "Guilherme de Freitas"


[tool.setuptools_scm]
write_to = "src/sample_handling/_version.py"
fallback_version = "0.6.0"

[tool.mypy]
ignore_missing_imports = true # Ignore missing stubs in imported modules

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = "error"

[tool.coverage.run]
data_file = "/tmp/sample_handling.coverage"

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

# tox must currently be configured via an embedded ini string
# See: https://github.com/tox-dev/tox/issues/999
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True

[testenv:{pre-commit,mypy,pytest}]
# Don't create a virtualenv for the command, requires tox-direct plugin
direct = True
passenv = *
allowlist_externals =
    pytest
    pre-commit
    mypy
    sphinx-build
    sphinx-autobuild
commands =
    pytest: pytest tests --cov=sample_handling --cov-report term --cov-report xml:cov.xml -s {posargs}
    mypy: mypy src tests {posargs}
    pre-commit: pre-commit run --all-files {posargs}
setenv =
    CONFIG_PATH=config.json
    MOUNT_POINT=/
"""


[tool.ruff]
src = ["src", "tests"]
line-length = 120
lint.select = [
    "C4",   # flake8-comprehensions - https://beta.ruff.rs/docs/rules/#flake8-comprehensions-c4
    "E",    # pycodestyle errors - https://beta.ruff.rs/docs/rules/#error-e
    "F",    # pyflakes rules - https://beta.ruff.rs/docs/rules/#pyflakes-f
    "W",    # pycodestyle warnings - https://beta.ruff.rs/docs/rules/#warning-w
    "I001", # isort
]
